# PredictEase

./: main.py  mkdocs.yml  pyproject.toml
docs/: index.md
predictease/: __init__.py  __main__.py  cli.py  core.py  test_env.py
predictease/analysis/: reader.py  visualization.py
predictease/models/: arima.py  baseline.py  ml_models.py  nn_models.py  nn_models_multivariate.py  nn_models_univariate.py  prophet.py
tests/: test_arima.py  test_baseline.py  test_ml_models.py
