[project]
name = "predictease"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Kaiss",email = "mateus.kaiss@ufpr.br"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "statsmodels (>=0.14.0,<0.15.0)",
    "prophet (>=1.1.0,<2.0.0)",
    "scipy (>=1.9.0,<1.11.0)",
    "scikit-learn (>=1.1.0,<1.3.0)",
    "xgboost (>=1.7.0,<2.0.0)",
    "lightgbm (>=3.3.0,<4.0.0)",
    "torch (>=2.0.0,<2.5.0)",
    "pandas (>=1.5.0,<2.1.0)",
    "matplotlib (>=3.5.0,<3.8.0)",
    "seaborn (>=0.11.0,<0.13.0)",
    "optuna (>=3.0.0,<4.0.0)",
    "python-dateutil (>=2.8.0,<3.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "pmdarima (>=1.8.0,<2.0.0)",
    "tensorflow==2.10.1",
    "tensorflow-io-gcs-filesystem==0.26.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.8"
mkdocstrings = "^0.29.0"
mkdocstrings-python = "^1.16.5"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
format = "blue . && isort ."
test = "pytest -s -x --cov=predictease -vv"
post_test = "coverage html"